# inference-backup-chattts

./: .gitignore  README.md  SKILL.md  environment.yml  install.bat  install.sh  pyproject.toml  requirements-min.txt  requirements.txt  run_chattts.bat
ChatTTS/: chattts_infer.py
ChatTTS/ChatTTS/: README.md
RVC/: check_env.py  params_rvc.json  requirements.txt  requirements_min.txt  run_rvc.bat  run_rvc.sh  rvc_infer_json.py
RVC/configs/: config.py
RVC/infer/modules/vc/: pipeline.py.bak_pm
examples/web/: funcs.py  funcs.py.bak  webui.py  webui.py.bak
scripts/: _python_resolver.py
